force-app/main/default/objects/custom_create370__c/custom_create370__c.object-meta.xml
<CustomObject>
    <label>Custom created object370</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects370</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>