force-app/main/default/objects/custom_create370__c/fields/custom_create_370field651__c.field-meta.xml
<CustomField>
    <fullName>custom_create_370field651__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 370field651</label>
    <type>Checkbox</type>
</CustomField>