force-app/main/default/objects/custom_create370__c/fields/custom_create_370field660__c.field-meta.xml
<CustomField>
    <fullName>custom_create_370field660__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 370field660</label>
    <type>Checkbox</type>
</CustomField>